--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,6 +1,6 @@
 <div class="app-root">
 	<div class="app-home">
-		<div [attr.class]="(vars.loadHotel !== undefined ? 'search' : '')">
+		<div [attr.class]="(vars.loadSearch !== undefined ? 'search' : '')">
 			<div>
 				<div class="main wrap">
 					<div class="head wrap">
