--- a/src/app/busca/busca.component.scss
+++ b/src/app/busca/busca.component.scss
@@ -1,10 +1,789 @@
-.icon.loading {
-	display: block;
-	margin: 0 auto;
-	width: 2rem;
-	img {
+.app-home {
+	.icon.loading {
+		display: block;
+		margin: 0 auto;
+		width: 2rem;
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
+		}
+	}
+	& .search {
+		&>div {
+			vertical-align: top;
+			height: 0;
+			padding-top: 11rem;
+			position: relative;
+			&>.wrap {
+				position: fixed;
+				top: 0;
+				left: 50%;
+				width: inherit;
+				z-index: 3;
+				background-color: #fff;
+				padding-top: 1rem;
+				padding-bottom: 0.1rem;
+				transform: translate(-50%, 0);
+			}
+			.head {
+				margin: 0;
+				position: relative;
+				padding: 0;
+				margin-bottom: .8rem;
+				h1 {
+					width: 10rem;
+					border: 0;
+				}
+				p {
+					display: none;
+				}
+				.menu {
+					position: absolute;
+					right: 0;
+					top: 0;
+					height: 100%;
+					overflow: hidden;
+					display: block;
+					ul {
+						display: block;
+						cursor: default;
+						li {
+							display: inline-block;
+							a {
+								display: block;
+								text-decoration: none;
+								color: #aaa;
+								font-weight: 600;
+								cursor: default;
+								&:before {
+									cursor: default;
+									content: '|';
+									display: inline-block;
+									vertical-align: middle;
+									margin-right: .5rem;
+								}
+								span {
+									cursor: pointer;
+									vertical-align: middle;
+									display: inline-block;
+									line-height: 2;
+									margin-right: .5rem;
+								}
+							}
+						}
+					}
+				}
+			}
+			.body {
+				.sub {
+					margin-top: 1.3rem;
+					text-align: left;
+					.txt {
+						padding-bottom: 0.7rem;
+						display: block;
+					}
+				}
+				.opt .rooms.focus {
+					margin-bottom: 0;
+				}
+			}
+		}
+	}
+	.result {
 		display: block;
 		width: 100%;
-		height: auto;
+		position: absolute;
+		top: 12rem;
+		left: 0;
+		&[hidden] {
+			display: none;
+		}
+		.filtro {
+			position: absolute;
+			margin-top: 0;
+			float: left;
+			width: 32%;
+			height: 100%;
+			top: -12rem;
+			left: 0;
+			padding-top: 12rem;
+			z-index: 2;
+			& .filtros {
+				min-height: 12rem;
+				margin-top: 0;
+				padding: 0 2rem 1rem 0;
+			}
+		}
+		&>.wrap {
+			margin: 0;
+			position: relative;
+		}
+	}
+	.cards {
+		float: right;
+		width: 68%;
+		position: relative;
+		.stickie {
+			position: fixed;
+			top: 11rem;
+			z-index: 2;
+			padding: 0.6rem 0rem;
+			background-color: #fff;
+			&:before {
+				width: 115%;
+				height: 100%;
+				display: block;
+				content: '';
+				position: absolute;
+				top: 0;
+				left: -1rem;
+				z-index: -1;
+				cursor: default;
+				background: #fff;
+				border: 4rem solid #fff;
+				border-bottom: 1px solid #aaa;
+			}
+			&>.wrap {
+				.sort {
+					text-align: left;
+					/* display: table-row; */
+					display: block;
+					overflow: auto;
+					min-height: 3rem;
+					height: auto;
+					max-height: 4rem;
+					white-space: nowrap;
+					&>li {
+						display: inline-block;
+						vertical-align: middle;
+						&:before {
+							cursor: default;
+							content: '|';
+							display: inline-block;
+							vertical-align: middle;
+							margin-right: .5rem;
+						}
+						&:first-child:before {
+							display: none;
+						}
+						&.item {
+							&>*,
+							& a {
+								text-decoration: none;
+								color: #777;
+								font-weight: 600;
+								cursor: pointer;
+								display: inline-block !important;
+								.icon.hotdeals {
+									display: block;
+									margin: 0 auto;
+									width: 3.7rem;
+									img {
+										display: block;
+										width: 100%;
+										height: auto;
+									}
+								}
+								&.active {
+									color: #C0252E;
+								}
+							}
+						}
+						&.maps {
+							a {
+								overflow: hidden;
+								width: 7rem;
+								display: inline-block;
+								height: 2rem;
+								vertical-align: middle;
+								position: relative;
+								& .fa {
+									position: absolute;
+									top: 4px;
+									left: 50%;
+									transform: translate(-50%, 0);
+								}
+								span {
+									display: block;
+									text-align: center;
+									position: absolute;
+									bottom: 0;
+									left: 50%;
+									transform: translate(-50%, 0);
+									font-size: 0.83rem;
+									white-space: nowrap;
+									font-weight: 600;
+								}
+								img {
+									margin: 0;
+									display: block;
+								}
+							}
+						}
+						&.compare {
+							a {
+								text-decoration: none;
+								display: inline-block;
+								padding: 0.4rem;
+								vertical-align: middle;
+								&.disabled {
+									background-color: #aaa;
+									color: #fff;
+								}
+								.icon {
+									display: inline-block;
+									width: 2rem;
+									vertical-align: middle;
+									img {
+										display: block;
+										width: 100%;
+										height: auto;
+									}
+								}
+								.text {
+									display: inline-block;
+									color: #fff;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		&>ul {
+			display: block;
+			padding-top: 4rem;
+			&>li {
+				display: block;
+				width: 100%;
+				position: relative;
+				border: 1px solid #aaa;
+				border-radius: 4px;
+				margin-bottom: 1rem;
+				box-shadow: 4px 4px 18px 0px #fff;
+				.img {
+					float: left;
+					width: 30%;
+					padding-bottom: 30%;
+					overflow: hidden;
+					position: relative;
+					.cafe-incluso {
+						position: absolute;
+						top: 0.5rem;
+						left: 0;
+						z-index: 1;
+						background: rgba(255, 255, 255, 0.75);
+						padding-right: 0.3rem;
+						&>img,
+						&>span {
+							vertical-align: middle;
+							display: inline-block;
+						}
+						&>img {
+							width: 1.6rem;
+						}
+						&>span {
+							font-size: 0.75rem;
+							font-weight: 600;
+							vertical-align: middle;
+							&>span {
+								display: inline-block;
+								vertical-align: baseline;
+							}
+						}
+					}
+					.abs {
+						position: absolute;
+						top: 0;
+						left: 0;
+						height: auto;
+						width: 100%;
+						display: block;
+						transition: left .4s ease;
+						background-color: #fff;
+						z-index: 0;
+						&.alignL {
+							left: -100%;
+						}
+						&.alignC {
+							left: 0%;
+						}
+						&.alignR {
+							left: 100%;
+						}
+
+						img {
+							display: block;
+							width: 100%;
+						}
+						img.flipped {
+							transform: scaleX(-1) rotate(180deg);
+							filter: FlipH;
+						}
+					}
+				}
+				.info {
+					width: 70%;
+					height: 100%;
+					position: absolute;
+					top: 0;
+					left: 30%;
+				}
+			}
+		}
+		.top,
+		.bot {
+			.left {
+				text-align: left;
+				position: relative;
+			}
+			.right {
+				text-align: right;
+				position: relative;
+			}
+		}
+		.top {
+			padding: 0.6rem;
+			padding-bottom: 0;
+			.left {
+				float: left;
+				max-width: 70%;
+				width: 70%;
+			}
+			.right {
+				float: right;
+				max-width: 30%;
+			}
+		}
+		.bot {
+			padding: 0.6rem;
+			padding-top: 0;
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			.left {
+				width: 55%;
+				height: 100%;
+				left: 0.6rem;
+				top: 0;
+				display: block;
+				position: absolute;
+				z-index: 1;
+			}
+			.right {
+				float: right;
+				width: 53%;
+			}
+		}
+		.rateTrip[hidden],
+		.lastRooms[hidden] {
+			display: none;
+		}
+		.rateTrip {
+			font-weight: 600;
+			line-height: 1.5;
+			font-size: 0.89rem;
+		}
+		.lastRooms {
+			padding-top: 0.1rem;
+			.icon {
+				display: inline-block;
+				width: 1rem;
+				img {
+					display: block;
+					width: 100%;
+					height: auto;
+				}
+			}
+			.text {
+				font-size: 0.83rem;
+			}
+		}
+		.location,
+		.room-desc {
+			display: inline-block;
+			img {
+				display: none;
+				width: 100%;
+				height: auto;
+			}
+			.label {
+				white-space: nowrap;
+				max-width: 100%;
+				text-overflow: clip;
+				overflow: hidden;
+				width: 100%;
+				display: inline-block;
+				font-size: 0.71rem;
+			}
+		}
+		.room-desc {
+			width: 100%;
+		}
+		.nome {
+			font-size: 1.18rem;
+			color: #222;
+			display: block;
+		}
+		.ndwrap {
+			display: block;
+			width: 100%;
+			position: relative;
+			padding-top: 0.75rem;
+			.rateStar,
+			.location {
+				display: block;
+				float: left;
+			}
+			.rateStar {
+				max-width: 28%;
+				line-height: 0;
+			}
+			.location {
+				width: 72%;
+				line-height: 1.4;
+				padding: 0 0.2rem;
+			}
+		}
+
+		.preco {
+			padding-bottom: 0.4rem;
+			.aincluir {
+				display: block;
+				padding-bottom: 0.4rem;
+				font-size: 0.71rem;
+				color: #222;
+			}
+			.apartir {
+				padding-bottom: 0.1rem;
+				font-size: 0.71rem;
+				.old-val {
+					font-size: inherit;
+					text-decoration: line-through;
+				}
+			}
+			.cheio {
+				position: relative;
+				display: inline-block;
+				.media {
+					display: block;
+					position: absolute;
+					white-space: nowrap;
+					right: 100%;
+					top: 50%;
+					padding-top: 0.1rem;
+					font-size: 0.71rem;
+					margin-right: 0.4rem;
+					color: #222;
+					transform: translate(0, -50%);
+				}
+				.val {
+					font-size: 1.3rem;
+					display: block;
+					font-weight: 600;
+				}
+			}
+		}
+		.rateStar {
+			display: inline-block;
+			.stars {
+				padding: 0.5rem 0;
+				span {
+					color: #ecb939;
+					font-size: 1.15rem;
+					letter-spacing: -0.17rem;
+					position: relative;
+					&:before {
+						content: '\2605';
+						position: absolute;
+						left: 0;
+					}
+					&.half:before {
+						width: 50%;
+						overflow: hidden;
+					}
+				}
+			}
+		}
+		.location {
+			display: inline-block;
+			color: #aaa;
+			font-size: 0.83rem;
+		}
+		.amenidades {
+			li {
+				display: inline-block;
+				&[hidden] {
+					display: none;
+				}
+				&>span {
+					padding: 0 0.2rem;
+					position: relative;
+					display: inline-block;
+					font-size: 0.89rem;
+					& img {
+						display: block;
+						height: auto;
+						width: 100%;
+					}
+				}
+				& .svg {
+					width: 1.3rem;
+					display: block;
+					height: 1rem;
+				}
+			}
+		}
+		.details {
+			position: relative;
+			.selecionar {
+				display: block;
+				position: relative;
+				float: right;
+				a {
+					cursor: pointer;
+					text-decoration: none;
+					color: #fff;
+					padding: 0.5rem;
+					display: inline-block;
+					margin: 0 0 0 0.5rem;
+					float: right;
+					border-radius: 4px;
+					font-size: 1.18rem;
+				}
+			}
+			.tarifa {
+				position: absolute;
+				height: 100%;
+				width: auto;
+				.non-refundable,
+				.refundable {
+					padding-top: 0.1rem;
+					display: block;
+					font-weight: 600;
+					font-size: 0.71rem;
+				}
+				.refundable {
+					color: forestgreen;
+				}
+				.iof {
+					display: block;
+					color: #222;
+					font-size: 0.71rem;
+					position: absolute;
+					bottom: 0;
+					right: 0;
+					padding-bottom: 0.2rem;
+				}
+			}
+		}
+		& .compBtn {
+			position: absolute;
+			bottom: 0.6rem;
+			left: 0;
+			display: block;
+			&>a {
+				margin-top: 1rem;
+				display: inline-block;
+				text-decoration: none;
+				background-color: transparent;
+				&.active {
+					background-color: #ecb939;
+					color: #fff;
+				}
+				span {
+					font-weight: 600;
+					font-size: 0.71rem;
+				}
+			}
+		}
+	}
+	.filtro {
+		text-align: left;
+		h3 {
+			font-weight: 600;
+			color: #777;
+			padding-bottom: 0.8rem;
+		}
+		h4 {
+			text-transform: uppercase;
+			font-size: 0.83rem;
+			color: #243E6F;
+			font-weight: 600;
+			padding-bottom: 0.4rem;
+		}
+		.filtros .wrap>div {
+			border-bottom: 1px solid #aaa;
+			padding-bottom: 0.4rem;
+			margin-bottom: 0.4rem;
+		}
+		.filtros .wrap>.title {
+			border: 0;
+			padding: 0;
+			margin: 0;
+			& h4 {
+				float: left;
+				display: inline-block;
+			}
+			& .sanfona {
+				display: inline-block;
+				text-decoration: none;
+				float: right;
+			}
+		}
+		.filtro-ativo {
+			ul {
+				display: block;
+				padding-bottom: 0.2rem;
+				li {
+					display: inline-block;
+					background-color: #243E6F;
+					border-radius: 4px;
+					padding: 0.33rem;
+					margin: 0.13rem 0;
+					width: auto;
+					a {
+						display: block;
+						color: #fff;
+						font-size: 0.71rem;
+						text-decoration: none;
+					}
+				}
+			}
+			.filtro-limpa {
+				font-size: 0.83rem;
+				text-decoration: none;
+				padding: 0.4rem 0;
+			}
+		}
+		.hotelname {
+			label {
+				float: left;
+				width: 86%;
+				vertical-align: middle;
+				padding-right: 0.3rem;
+				height: 2rem;
+				span {
+					text-transform: uppercase;
+					color: #888;
+					display: block;
+				}
+				input {
+					border-radius: 4px;
+					border: 1px solid #aaa;
+					display: block;
+					width: 100%;
+					font-size: 0.83rem;
+					height: 100%;
+					padding: 0.3rem 0.6rem;
+					color: #222;
+				}
+			}
+			a.btn {
+				float: left;
+				width: 14%;
+				display: inline-block;
+				color: #fff;
+				text-decoration: none;
+				vertical-align: middle;
+				border-radius: 4px;
+				height: 2rem;
+				text-align: center;
+				span {
+					padding: 0;
+					display: block;
+					border-radius: 4px;
+					line-height: 2;
+				}
+			}
+		}
+		.hotelprice {
+			.wrap {
+				h4 {
+					text-align: left;
+				}
+				em {
+					font-size: 0.71rem;
+					text-align: center;
+					display: block;
+					font-style: italic;
+				}
+				.ng2-nouislider {
+					margin-left: auto;
+					margin-right: auto;
+					width: 80%;
+					margin-top: 0.6rem;
+				}
+			}
+		}
+		.hotelfilters {
+			border: 0 !important;
+			.wrap {
+				ul {
+					border-bottom: 1px solid #aaa;
+					padding-bottom: 0.4rem;
+					margin-bottom: 0.4rem;
+					&[hidden] {
+						overflow: hidden;
+						height: 0;
+						padding: 0;
+						display: block;
+					}
+					li {
+						label {
+							position: relative;
+							font-size: 0.71rem;
+							.checkIcon {
+								content: '';
+								position: absolute;
+								border: 0.4rem solid #aaa;
+								display: block;
+								height: 3rem;
+								width: 3rem;
+								&:before {
+									display: block;
+									content: '';
+									background-color: #fff;
+									width: 80%;
+									height: 80%;
+								}
+								&.checked:before {
+									background-color: #aaa;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.noUi-horizontal {
+		height: 0.4rem;
+		&.noUi-target {
+			border-radius: 4px;
+		}
+		.noUi-base .noUi-connect {
+			background-color: #243E6F;
+		}
+		.noUi-handle {
+			width: 0.9rem;
+			height: 1.4rem;
+			left: -17px;
+			top: -10px;
+			border-radius: 4px;
+			margin-left: 0.5rem;
+			&:before,
+			&:after {
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
+				margin-left: -1px;
+			}
+			&:after {
+				margin-left: 2px;
+			}
+		}
 	}
 }
