--- a/src/app/html/optbar/optbar.component.html
+++ b/src/app/html/optbar/optbar.component.html
@@ -1,8 +1,8 @@
 <div class="html-optbar">
-	<form class="wrap" (ngSubmit)="onSubmit(false)" novalidate>
+	<form class="wrap" (ngSubmit)="onSubmit()" novalidate>
 		<div class="search">
 			<label *ngIf="options.startDate">
-				<ng2-completer (input)="onCompleterInput($event)" (focus)="onCompleterFocus($event)" [selectOnFocus]="false" (blur)="onCompleterBlur($event)" name="busca" (selected)="onCompleterSelected($event)" [(initialValue)]="vars.mdl.busca.init" [autoMatch]="true" [inputClass]="vars.mdl.busca.cls" [autofocus]="false" [textSearching]="null" [textNoResults]="null" [inputName]="'busca'" [placeholder]="vars.mdl.busca.placeholder" [(ngModel)]="vars.mdl.busca.val" [datasource]="regions" [clearUnselected]="false" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
+				<ng2-completer (input)="onCompleterInput($event)" (focus)="onCompleterFocus($event)" [selectOnFocus]="true" (blur)="onCompleterBlur($event)" name="busca" (selected)="onCompleterSelected($event)" [(initialValue)]="vars.mdl.busca.init" [autoMatch]="true" [inputClass]="vars.mdl.busca.cls" [autofocus]="true" [textSearching]="null" [textNoResults]="null" [inputName]="'busca'" [placeholder]="vars.mdl.busca.placeholder" [(ngModel)]="vars.mdl.busca.val" [datasource]="regions" [clearUnselected]="false" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
 				<span class="icon"></span>
 			</label>
 		</div>
@@ -18,7 +18,7 @@
 						<span class="txt" [textContent]="vars.mdl.saida.txt || '&nbsp;'"></span>
 						<span class="label"><span>Check-out</span></span>
 					</div>
-					<div id="pickMe" [attr.class]="'topArrow' + (!vars.mdl.saida.val.length || show.calendarRight ? ' rightAlign': '')"></div>
+					<div id="pickMe" [attr.class]="'topArrow' + (show.calendarRight ? ' rightAlign': '')"></div>
 				</label>
 			</div>
 			<div #rooms class="rooms">
