--- a/src/app/html/title/title.component.html
+++ b/src/app/html/title/title.component.html
@@ -1,5 +1,9 @@
 <div class="html-title">
-	<h1><img [attr.src]="logo.url" [attr.alt]="logo.alt"></h1>
+	<a href="/">
+		<h1>
+			<img [attr.src]="logo.url" [attr.alt]="logo.alt">
+		</h1>
+	</a>
 	<p class="fgc c1" [innerHTML]="slogan"></p>
 	<div class="menu" *ngIf="vars.loadSearch">
 		<ul *ngIf="menu.length">
