--- a/src/app/html/title/title.component.html
+++ b/src/app/html/title/title.component.html
@@ -1,5 +1,5 @@
 <div class="html-title">
-	<a href="/">
+	<a href="javascript:;" [routerLink]="'/'">
 		<h1>
 			<img [attr.src]="logo.url" [attr.alt]="logo.alt">
 		</h1>
