--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -118,7 +118,7 @@
 							</span>
 						</li>
 						<li class="maps">
-							<a href="map.html" target="_blank">
+							<a href="map" target="_blank">
 								<i class="fa fa-map-marker fgc c2" aria-hidden="true"></i>
 								<span class="text">
 									Ver no mapa
