--- a/src/app/html/optbar/optbar.component.html
+++ b/src/app/html/optbar/optbar.component.html
@@ -2,7 +2,7 @@
 	<form class="wrap" (ngSubmit)="onSubmit()" novalidate>
 		<div class="search">
 			<label *ngIf="options.startDate">
-				<ng2-completer (input)="onCompleterInput($event)" (focus)="onCompleterFocus($event)" [selectOnFocus]="true" (blur)="onCompleterBlur($event)" name="busca" (selected)="onCompleterSelected($event)" [(initialValue)]="vars.mdl.busca.init" [autoMatch]="true" [inputClass]="vars.mdl.busca.cls" [autofocus]="false" [textSearching]="null" [textNoResults]="null" [inputName]="'busca'" [placeholder]="vars.mdl.busca.placeholder" [(ngModel)]="vars.mdl.busca.val" [datasource]="regions" [clearUnselected]="false" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
+				<ng2-completer (selected)="onCompleterSelected($event)" (input)="onCompleterInput($event)" (focus)="onCompleterFocus($event)" (blur)="onCompleterBlur($event)" [selectOnFocus]="true" name="busca" [(initialValue)]="vars.mdl.busca.init" [autoMatch]="true" [inputClass]="vars.mdl.busca.cls" [autofocus]="false" [textSearching]="null" [textNoResults]="null" [inputName]="'busca'" [placeholder]="vars.mdl.busca.placeholder" [(ngModel)]="vars.mdl.busca.val" [datasource]="regions" [clearUnselected]="false" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
 				<span class="icon"></span>
 			</label>
 		</div>
