--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -134,8 +134,8 @@
 					</ul>
 				</div>
 			</div>
-			<ul *ngIf="vars.hotelList.HotelListResponse">
-				<li [attr.style]="cardShadow(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color)" [attr.class]="'wrap ' + 'cardN' + i + ' '" *ngFor="let item of vars.hotelList.HotelListResponse; let i = index;">
+			<ul *ngIf="hotelList.HotelListResponse">
+				<li [attr.style]="cardShadow(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color)" [attr.class]="'wrap ' + 'cardN' + i + ' '" *ngFor="let item of hotelList.HotelListResponse; let i = index;">
 					<div class="img" (click)="show.cardImg[i] = show.cardImg[i] ? 0 : 1" [attr.data-test]="(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color ? ('box-shadow: 0px 0px 16px 4px ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color + ';') : '')">
 						<span *ngIf="show.valueAdds[i] && show.valueAdds[i][0]" class="cafe-incluso">
 							<!-- <img [attr.src]="vars.icons.base + 'adds-' + valueAdds.icons[0] + '.png'" alt=""> -->
@@ -245,8 +245,8 @@
 	<span [hidden]="!infinityScrolling">Loading</span>
 </ng-template>
 <ng-template #other_content>
-	<span *ngIf="vars.hotelList.HotelListResponseStr" [textContent]="vars.hotelList.HotelListResponseStr"></span>
-	<span class="loading icon" *ngIf="vars.hotelList.HotelListResponseStr === null">
+	<span *ngIf="hotelList.HotelListResponseStr" [textContent]="hotelList.HotelListResponseStr"></span>
+	<span class="loading icon" *ngIf="hotelList.HotelListResponseStr === null">
 		<img [attr.src]="vars.loading" alt="Carregando...">
 	</span>
 </ng-template>
