--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,7 +195,7 @@ body {
     overflow-y: auto;
 }
 
-.app-main {
+.app-root {
     width: 100%;
     margin: 0 auto;
 }
@@ -274,7 +274,7 @@ body {
         width: calc(100% + (100vw - 100%));
         font-size: 1.18vw !important;
     }
-    .app-main,
+    .app-root,
     .app-home .search>div>.wrap {
         padding-left: 10rem !important;
         padding-right: 10rem !important;
@@ -287,7 +287,7 @@ body {
         width: calc(100% + (100vw - 100%));
         font-size: 17px !important;
     }
-    .app-main,
+    .app-root,
     .app-home .search>div>.wrap {
         max-width: 1440px;
         padding-left: 170px !important;
