--- a/src/app/html/bar/bar.component.html
+++ b/src/app/html/bar/bar.component.html
@@ -1,5 +1,5 @@
 <form class="wrap" (ngSubmit)="onSubmit()" novalidate>
-	<!-- <div class="html-bar-region"></div> -->
+	<div class="html-bar-region"></div>
 	<div class="opt">
 		<!-- <div class="html-bar-calendar"></div> -->
 		<div class="html-bar-apt"></div>
@@ -13,6 +13,6 @@
 		<input placeholder="eanSharedSecret" name="secret" [(ngModel)]="keys.secret">
 	</div>
 </form>
-<div class="sub" *ngIf="vars.loadSearch">
-	<span class="txt">{{mdl.busca.lastVal}}: {{vars.hotelList.properties}} propriedade{{vars.hotelList.properties > 1 ? 's' : ''}}</span>
+<div class="sub" *ngIf="vars.loadSearch && vars.last.props">
+	<span class="txt">{{vars.last.busca}}: {{vars.last.props}} propriedade{{vars.last.props > 1 ? 's' : ''}}</span>
 </div>
