--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -225,7 +225,7 @@
 								</div>
 								<div class="details wrap">
 									<div class="selecionar">
-										<a target="_blank" [attr.href]="hotelUrl(item.hotelId)" class="btn bgc c1">
+										<a target="_blank" href="javascript:;" [routerLink]="['/', 'u', rParam({id: item.hotelId}), 'detalhe']" class="btn bgc c1">
 											<span>Selecionar</span>
 										</a>
 									</div>
