--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -96,12 +96,12 @@
 							</a>
 						</li>
 						<li class="item">
-							<span (click)="sortBy($event, 'price', (vars.sort.price.asc ? false : true))">
+							<span>
 								Preço
-								<a title="Maior no Topo" href="javascript:;" [attr.class]="vars.sort.price.desc ? 'active' : ''" [routerLink]="['/', 'u', rParam({sort: 1})].join('/')">
+								<a title="Maior no Topo" href="javascript:;" [attr.class]="vars.sort.price.desc ? 'active' : ''" [routerLink]="['/', 'u', rParam({sort: 1})]">
 									<i class="fa fa-sort-desc"></i>
 								</a>
-								<a title="Menor no Topo" href="javascript:;" [attr.class]="vars.sort.price.asc ? 'active' : ''" [routerLink]="['/', 'u', rParam({sort: 2})].join('/')">
+								<a title="Menor no Topo" href="javascript:;" [attr.class]="vars.sort.price.asc ? 'active' : ''" [routerLink]="['/', 'u', rParam({sort: 2})]">
 									<i class="fa fa-sort-asc"></i>
 								</a>
 							</span>
@@ -225,7 +225,7 @@
 								</div>
 								<div class="details wrap">
 									<div class="selecionar">
-										<a target="_blank" href="javascript:;" [routerLink]="['/', 'u', rParam({id: item.hotelId}), 'detalhe']" class="btn bgc c1">
+										<a target="_blank" href="javascript:;" [routerLink]="['/', 'u', rParam({go:true}), 'detalhe', {hi: item.hotelId}]" class="btn bgc c1">
 											<span>Selecionar</span>
 										</a>
 									</div>
