filter and sorting working byproxy

--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -98,7 +98,7 @@
 						</li>
 						<li class="item">
 							<span>
-								Preço
+								<a href="javascript:;" [routerLink]="['/', 'u', rParam({sort: 0})]">Preço</a>
 								<a title="Maior no Topo" href="javascript:;" [attr.class]="vars.sort.price.desc ? 'active' : ''" [routerLink]="['/', 'u', rParam({sort: 1})]">
 									<i class="fa fa-sort-desc"></i>
 								</a>
