--- a/src/app/html/bar/bar.component.html
+++ b/src/app/html/bar/bar.component.html
@@ -1,7 +1,7 @@
 <form class="wrap" (ngSubmit)="onSubmit()" novalidate>
 	<div class="html-bar-region"></div>
 	<div class="opt">
-		<!-- <div class="html-bar-calendar"></div> -->
+		<div class="html-bar-calendar"></div>
 		<div class="html-bar-apt"></div>
 		<div class="submit">
 			<input class="bgc c1" type="submit" [attr.value]="vars.path === 'detalhe' ? 'Atualizar' : 'Busca'">
