--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -136,7 +136,7 @@
 			</div>
 			<div class="msg" *ngIf="hotelList">
 				<div *ngIf="!hotelList.searchId">
-					<span class="loading icon">
+					<span *ngIf="!hotelList.HotelListResponseStr" class="loading icon">
 						<img [attr.src]="vars.loading" alt="Carregando...">
 					</span>
 				</div>
