--- a/src/app/root/root.component.scss
+++ b/src/app/root/root.component.scss
@@ -5,6 +5,10 @@ body {
 			height: 100%;
 			text-align: center;
 			& .search {
+				&.detalhe>div {
+					padding: 6rem 0 0 0;
+					text-align: left;
+				}
 				&>div {
 					vertical-align: top;
 					height: 0;
@@ -109,7 +113,6 @@ body {
 					padding: 0.5rem 0;
 					span {
 						color: #ecb939;
-						font-size: 1.15rem;
 						letter-spacing: -0.17rem;
 						position: relative;
 						&:before {
@@ -118,11 +121,18 @@ body {
 							left: 0;
 						}
 						&.half:before {
-							width: 50%;
+							width: 0;
 							overflow: hidden;
 						}
 					}
 				}
+			}
+			.rateTrip {
+				&[hidden] {
+					display: none;
+				}
+				font-weight: 600;
+				line-height: 1.5;
 			}
 		}
 	}
