--- a/src/app/html/bar/bar.component.scss
+++ b/src/app/html/bar/bar.component.scss
@@ -100,7 +100,7 @@ form {
 				display: block;
 			}
 			&[hidden] {
-				visibility: hidden;
+				visibility: hidden !important;
 			}
 		}
 		.icon-room,
