--- a/src/app/root/root.component.scss
+++ b/src/app/root/root.component.scss
@@ -106,9 +106,11 @@ body {
 					width: 99%;
 				}
 			}
-			.body {}
 			.rateStar {
 				display: inline-block;
+				&[hidden] {
+					visibility: hidden !important;
+				}
 				.stars {
 					padding: 0.5rem 0;
 					span {
@@ -129,7 +131,7 @@ body {
 			}
 			.rateTrip {
 				&[hidden] {
-					display: none;
+					display: none !important;
 				}
 				font-weight: 600;
 				line-height: 1.5;
