--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -4,7 +4,7 @@
 			<div>
 				<h2 [textContent]="res.hotelName" class="fsz f20"></h2>
 			</div>
-			<div class="rateStar">
+			<div class="rateStar" [hidden]="!res.hotelRating">
 				<div class="stars">
 					<span [attr.class]="'fsz f19' + (res.hotelRating % 1 !== 0 && j + 1 > res.hotelRating ? ' half' : '')" *ngFor="let star of [] | range:res.hotelRating; let j = index;">
 						☆
